<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:background="@color/grey"
              android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/tv_code"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/order_code"/>

    <TextView
        android:id="@+id/tv_customer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/order_customer"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/order_date"/>


</LinearLayout>