<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:background="@color/grey"
              android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:textColor="@color/black"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/label_dock_code"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_stock_code"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_num"
        android:textColor="@color/black"
        />


</LinearLayout>