<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:background="@color/grey"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_dockcode"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:padding="10dp"
        android:gravity="center_vertical|left"
        android:text="@string/label_dock_code"/>

    <TextView
        android:id="@+id/tv_stockcode"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center_vertical|left"
        android:padding="10dp"
        android:text="@string/label_stock_code"/>

   <!-- <TextView
        android:id="@+id/tv_stockbarcode"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:text="@string/label_stock_barcode"/>-->

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/memo_font_size"
        android:gravity="center_vertical|left"
        android:padding="10dp"
        android:text="@string/label_num"/>


</LinearLayout>