<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include
        android:id="@+id/layout_top"
        layout="@layout/topbar_first"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/label_order_code"
            android:textSize="@dimen/font_size_25"/>

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:padding="10dp"
            android:text="0120170508001"
            android:textSize="@dimen/font_size_20"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/horizontal_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/label_order_date"
            android:textSize="@dimen/font_size_25"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:padding="10dp"
            android:text="2017-05-08 12:32:34"
            android:textSize="@dimen/font_size_20"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/horizontal_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/label_order_user"
            android:textSize="@dimen/font_size_25"/>

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:padding="10dp"
            android:text="张小宝"
            android:textSize="@dimen/font_size_20"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/horizontal_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/label_order_customer"
            android:textSize="@dimen/font_size_25"/>

        <TextView
            android:id="@+id/tv_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:padding="10dp"
            android:text="请选择"
            android:textSize="@dimen/font_size_20"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/horizontal_line"
        />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_below="@id/bt_memo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dip"
        android:background="@drawable/shape_button_green"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/label_confirm"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

</LinearLayout>
