<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/topbar_first" android:id="@+id/layout_top"/>

    <LinearLayout
        android:id="@+id/rl_operate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <EditText
            android:id="@+id/et_barcode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:hint="@string/label_scan"
            android:textSize="12sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_weight="2"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Button
            android:id="@+id/bt_seal"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_button_green"
            android:text="@string/label_seal"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_button_green"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_save"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_memos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_operate"
        android:layout_below="@id/layout_top">

        <ListView
            android:id="@+id/lv_memos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@color/B7B7B7"
            android:dividerHeight="2dp"
            android:descendantFocusability="beforeDescendants"
            android:transcriptMode="normal"
            >
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
