<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10.0dip"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:gravity="center"
                android:text="@string/title_alert"
                android:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffd0d0d0"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="15.0dip"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/tv_sname"
                style="@style/text_14_666666"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="北京电视机"
               />

            <EditText
                android:id="@+id/et_snum"
                style="@style/text_14_666666"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="14"
                android:background="@null"
                android:cursorVisible="false"
                android:inputType="number"
                />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="0dip"
                android:layout_height="40.0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/shape_button_green"
                android:text="@string/ok" />

            <Button
                android:id="@+id/centerButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/shape_button_red"
                android:text="@string/ok" />

            <Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/shape_button_gray"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>