<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include android:id="@+id/layout_top" layout="@layout/topbar_first"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/layout_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_bottom_border">

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:hint="@string/input_account"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:text="andy"/>

                <ImageView
                    android:layout_width="16dip"
                    android:layout_height="18dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/et_account"
                    android:src="@mipmap/ic_account"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item_bottom_border">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:password="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:text="123456"/>

                <ImageView
                    android:layout_width="16dip"
                    android:layout_height="18dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/et_password"
                    android:src="@mipmap/ic_password"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item_bottom_border">

                <EditText
                    android:id="@+id/et_server"
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:hint="@string/input_server"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:text="http://10.1.2.30:8080"/>
            </RelativeLayout>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="270dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dip"
                android:background="@drawable/shape_button_green"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text=" 登    录 "
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
